Fix logo alignment

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -2,11 +2,12 @@
 
   .mas-logo {
     padding: $baseline-unit*2 0;
-    margin: 0 0 0 1.6667%;
+    margin: 0 0 0 $baseline-unit*2;
     @include respond-to($mq-l) {
+      margin: 0 0 0 1.6667%;
       position: absolute;
       top: 24px;
-      padding:0;
+      padding: 0;
     }
   }
 
